--- a/#source/scss/_scss/_menu.scss
+++ b/#source/scss/_scss/_menu.scss
@@ -18,23 +18,29 @@
     }
 }
 
-.input {
-    z-index: 3;
-    padding: 5px;
-    background: rgb(236, 234, 234);
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    width: 20%;
-    outline: none;
-    box-sizing: border-box;
-    text-transform: uppercase;
-}
-
 .h1 {
     // text-transform: uppercase;
     z-index: 3;
     font-size: calc(30px + 11 * (100vw / 1280));
     left: 40%;
+    display: flex;
+    position: relative;
+    text-decoration: none;
+    // border-radius: 30px;
+    text-align: center;
+    font-size: 35pt;
+    color: #3f404a;
+    // padding: 2px;
+    & :hover {
+        color: #5d5e6d;
+    }
+}
+
+.h17 {
+    // text-transform: uppercase;
+    z-index: 3;
+    font-size: calc(30px + 11 * (100vw / 1280));
+    left: -5%;
     display: flex;
     position: relative;
     text-decoration: none;
@@ -79,9 +85,9 @@
 .list_menuA {
     color: #5a5a7a;
     text-transform: uppercase;
-    font-size: 18px;
+    font-size: 13px;
     text-decoration: none;
-    text-align: right;
+    text-align: center;
 }
 @media only screen and (min-width: 768px) {
     .list_menuA:hover {
@@ -132,38 +138,41 @@
 
     &.active span {
         transform: scale(0);
-        transition: all 0.3s ease 0s;
+        transition: all 0.1s ease 0s;
     }
 
     &.active::before {
         transform: rotate(45deg);
         top: 9px;
-        background: #9d9fb0;
+        background: #fff;
     }
 
     &.active::after {
         transform: rotate(-45deg);
         bottom: 9px;
-        background: #9d9fb0;
+        background: #fff;
     }
 }
 
 .header_menu {
-    position: fixed;
-    top: -100%;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #e4e7ff;
-    display: block;
-    text-align: left;
-    transition: all 0.3s ease 0s;
+    position: absolute;
+    left: -100%;
+    // left: 0;
+    top: 60px;
+    width: 23%;
+    height: 100vh;
+    // background-color: #e4e7ff;
+    // background-color: #000000;
+    //  display: ;
+    text-align: center;
+    transition: all 0.7s ease 0s;
     padding: 60px 10px 20px 10px;
-    overflow: auto;
+    // overflow: inherit;
     z-index: -3;
 
     &.active {
-        top: 0;
+        left: 0;
+        position: fixed;
     }
 }
 
