--- a/scss/_scss/_adaptive.scss
+++ b/scss/_scss/_adaptive.scss
@@ -99,7 +99,7 @@
         color: #426342;
         margin-right: 20px;
         margin-left: 0;
-        // margin-bottom: 10px;q
+        // margin-bottom: 10px;
         font-size: calc(25px + (11 * 0.7) * ((100vw - 320px) / 1280));
     }
 
