--- a/scss/_scss/_nullstyles.scss
+++ b/scss/_scss/_nullstyles.scss
@@ -75,6 +75,12 @@ a {
 
 ul li {
     list-style: none;
+    list-style-type: none;
+}
+
+li {
+    list-style: none;
+    list-style-type: none;
 }
 
 img {
