--- a/scss/_scss/_istorichniFoto.scss
+++ b/scss/_scss/_istorichniFoto.scss
@@ -104,7 +104,7 @@ div.polaroidIFP {
 .istorichniFotoPage {
     margin-right: auto;
     margin-left: auto;
-    margin-top: 100px;
+    // margin-top: 100px;
 }
 .detailIF {
     margin-top: 100px;
