--- a/css/styles.css
+++ b/css/styles.css
@@ -184,6 +184,13 @@ img {
   width: 550px;
 }
 
+/* For the "inset" look only */
+/* Let's get this party started */
+::-webkit-scrollbar {
+  display: none;
+}
+
+/* Track */
 .Img {
   border-radius: 35px 35px 0 0;
   width: 100%;
@@ -272,6 +279,20 @@ p {
   }
   .isShowBtn_hide {
     opacity: 0;
+  }
+  .fa-caret-down {
+    position: fixed;
+    bottom: 150px;
+    right: 50px;
+    font-size: 50px;
+    z-index: 9999;
+    color: #9c9faf;
+  }
+  .fa-caret-down:before {
+    content: "\e900";
+  }
+  .fa-caret-down:hover {
+    color: #252532;
   }
   .mainPage h2 {
     color: #dcdcdc;
@@ -607,7 +628,7 @@ footer.loaded {
 .header_menu {
   position: absolute;
   left: -100%;
-  top: 60px;
+  top: 50px;
   width: 23%;
   height: 100vh;
   text-align: center;
