--- a/scss/_scss/_menu.scss
+++ b/scss/_scss/_menu.scss
@@ -31,6 +31,7 @@
     text-align: center;
     font-size: 35pt;
     color: #3f404a;
+    transition: color 0.35s, text-shadow 0.35s;
     // padding: 2px;
     & :hover {
         color: #5d5e6d;
@@ -157,8 +158,8 @@
 .input {
     z-index: 3;
     padding: 5px;
-    background: rgb(236, 234, 234);
-    border: 1px solid #ccc;
+    background: #5a5a7a;
+    border: 0px solid;
     margin: 5px;
     border-radius: 8px;
     // width: 20%;
@@ -169,7 +170,7 @@
 
 .header_menu {
     position: absolute;
-    left: -100%;
+    left: -10%;
     // left: 0;
     top: 50px;
     width: 23%;
