--- a/scss/_scss/_menu.scss
+++ b/scss/_scss/_menu.scss
@@ -3,7 +3,6 @@
     display: flex;
     justify-content: space-between;
     height: 35px;
-
     align-items: center;
     z-index: 9999;
 }
@@ -13,7 +12,6 @@
     position: relative;
     z-index: -2;
     display: block;
-
     & li {
         margin: 10px 0px 0px 0px;
     }
@@ -70,7 +68,6 @@
     left: 0;
     z-index: 9;
     position: fixed;
-
     &::before {
         content: "";
         position: absolute;
@@ -91,6 +88,7 @@
     text-decoration: none;
     text-align: center;
 }
+
 @media only screen and (min-width: 768px) {
     .list_menuA:hover {
         // background: #000;
@@ -102,13 +100,11 @@
 }
 
 .header_burger {
-    display: block;
-    // position: relative;
+    display: none;
     width: 30px;
     height: 20px;
     position: relative;
     z-index: 3;
-
     &::before,
     &::after {
         content: "";
@@ -119,15 +115,12 @@
         left: 0;
         transition: all 0.3s ease 0s;
     }
-
     &::before {
         top: 0;
     }
-
     &::after {
         bottom: 0;
     }
-
     & span {
         position: absolute;
         background-color: #fff;
@@ -137,24 +130,22 @@
         height: 3px;
         top: 9px;
     }
-
     &.active span {
         transform: scale(0);
         transition: all 0.1s ease 0s;
     }
-
     &.active::before {
         transform: rotate(45deg);
         top: 9px;
         background: #fff;
     }
-
     &.active::after {
         transform: rotate(-45deg);
         bottom: 9px;
         background: #fff;
     }
 }
+
 .input {
     z-index: 3;
     padding: 5px;
@@ -170,7 +161,7 @@
 
 .header_menu {
     position: absolute;
-    left: -10%;
+    left: 0;
     // left: 0;
     top: 50px;
     width: 23%;
@@ -183,7 +174,6 @@
     padding: 60px 10px 20px 10px;
     // overflow: inherit;
     z-index: -3;
-
     &.active {
         left: 0;
         position: fixed;
