--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -49,13 +49,13 @@
         display: block;
     }
     body {
-        background: #e4e7ff;
+       // background: #e4e7ff;
         &.lock {
             overflow: hidden;
         }
     }
     html {
-        background: #e4e7ff;
+       // background: #e4e7ff;
     }
 }
 
